.circleci/files/deployment.yml
#01-ECR-Nginx-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeapp-ecr
  labels:
    app: kubeapp-ecr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeapp-ecr
  template:
    metadata:
      labels:
        app: kubeapp-ecr
    spec:
      containers:
        - name: kubeapp-ecr
          image: uriimage
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "256Mi"
              cpu: "1000m"
          ports:
            - containerPort: 80
          command: ["/bin/sh"]
          args: ["-c", "npm run startlinux"]
