.circleci/files/ecrserver.yml
#02-ECR-Nginx-NodePortService.yml
apiVersion: v1
kind: Service
metadata:
  name: kubeapp-ecr-nodeport-service
  labels:
    app: kubeapp-ecr
  annotations:
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
    alb.ingress.kubernetes.io/healthcheck-path: /index.html
spec:
  type: NodePort
  selector:
    app: kubeapp-ecr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
